# pipes

./: .gitignore  pyproject.toml
test/: test_invalid_connection.py  test_simple_pipeline.py
tpipes/: data.py  pipeline.py  router.py  stage.py
