[tool.poetry]
name = "tpipes"
version = "0.1.0"
description = "A type-safe pipeline processing system with stages and routers."
authors = ["Shy-El Cohen <shyelshmuel@gmail.com>"]
license = "MIT"
include = ["tpipes/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-mypy = "^0.9.1"
mypy = "^1.0.0"

[tool.mypy]
files = "pipes"
ignore_missing_imports = true
strict = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--mypy --strict-markers"
testpaths = ["tests"]
mypy_ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"